plugins {
    id 'java'
    id 'application'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven {
        url "https://jitpack.io"
    }
}

application {
    applicationDefaultJvmArgs = ["-Xmx64m"]
    applicationName = 'MyApp'
    mainClass.set('org.example.Main')
}

dependencies {
    implementation "net.dv8tion:JDA:5.0.0-beta.20"
//    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
    implementation 'org.slf4j:slf4j-api:1.6.0'
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'ch.qos.logback:logback-classic:1.3.0'
    implementation 'dev.arbjerg:lavaplayer:2.1.0'

}


jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes 'Main-Class': 'org.example.Main'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(8))
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
